[project]
name = "samrefiner"
version = "1.4.1"
description = "A program for gathering variant information from mapped reads in a SAM formated files"
author = "Devon A. Gregory"
email = [{ name = "Devon A. Gregory", email = "gregoryde@missouri.edu" }]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ruff>=0.6.3",
    "pyright>=1.1.379",
    "marimo>=0.8.9",
]

[project.scripts]
"samrefiner" = "samrefiner.__main__:main"
